podspec: add additional features for podspec
runtimeClassName can be used to designate nvidia
for skypilot
