# api/v1alpha2/swagger.json
@@ -775,6 +775,10 @@
           "description": "Restart Policy",
           "type": "string"
         },
+        "runtimeClassName": {
+          "description": "RuntimeClassName for the pod",
+          "type": "string"
+        },
         "schedulerName": {
           "description": "Scheduler name for the pod",
           "type": "string"
